💄 Fix angled corners size on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -81,6 +81,11 @@ $menu-label-color: $white-ter
   border-right: 100px solid transparent
   border-top: 100px solid transparent
 
+  @media (max-width: 800px)
+    width: 120px
+    height: 120px
+    border-width: 60px
+
 .wrapper:after
   content: ''
   display: block
@@ -94,6 +99,11 @@ $menu-label-color: $white-ter
   border-top: 150px solid white
   border-left: 150px solid transparent
   border-bottom: 150px solid transparent
+
+  @media (max-width: 800px)
+    width: 80px
+    height: 80px
+    border-width: 40px
 
 .full-width-image
   width: 100vw
